Fix styling for code blocks with copy buttons next to floated content
Make the wrapper div for code block create a block formatting
context. This changes how floated content is laid out: previously
the wrapper was taking 100% width and tried to wrap text around the
floated content, now its width is limited by the width of floated
content. This way absolutely positioned elements inside the code
block (like the copy buttons) won't overlap the floated content.
We've had this problem before when adding line numbers (T272853),
and the workaround we used there won't work for the copy buttons.
It also lets us remove the background-color override, previously
needed to avoid it leaking outside the code block (T126010).

Bug: T40932

--- a/modules/pygments.copy.less
+++ b/modules/pygments.copy.less
@@ -5,10 +5,6 @@
  * Original author: Krinkle
  */
 
-.mw-highlight-copy {
-	position: relative;
-}
-
 /**
  * https://doc.wikimedia.org/oojs-ui/master/demos/ (2023-11-13)
  * https://design.wikimedia.org/style-guide/components/buttons.html
